GeneUtils: PanelBuilder: improve probe generation and selection based on discussion